Make grunt sass watch/build run without error

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,11 +2,8 @@
 
 //Vendor Specific
 @import 'css_reset';
-@import 'normalize';
 @import 'settings';
-@import 'foundation/components/grid';
-@import 'foundation/components/block-grid';
-
+@import 'foundation';
 
 
 //Custom
